# ha-optimization

./: .gitignore  DEPLOYMENT.md  MANIFEST.in  Makefile  README.md  README_INFLUXDB_LOCAL.md  SCRIPT_DEPLOYMENT.md  battery_optimizer_workflow.py  consumption_provider_mock.py  docker-compose.yml  main.py  models.py  price_fetcher.py  production_provider_mock.py  pyproject.toml  requirements.txt  requirements_production.txt  requirements_production_minimal.txt  setup.py
.cursor/rules/: battery_optimization.mdc  typing.mdc
analytics/: PV-power.csv  analyze.py  analyze_consumption.py  analyze_consumption_influx.py  analyze_daily_consumption.py  analyze_daily_consumption_comparison.py  analyze_pv.py  battery_calibration_analysis.py  cloudcoverage.csv  consumed-power.csv  production2024.csv  spotprice2024.csv  test_consumption_model.py
config/: README_battery.md  README_influxdb.md  battery_config.json  influxdb_config_local.json  influxdb_env.py
deploy/: README_alpine.md  README_requirements.md  build_script_package.sh  check_system.sh  fix_alpine_venv.sh  install.sh  install_dependencies_alpine.sh  node-red-flows.json  quick_fix_alpine.sh  troubleshoot_alpine.sh
evaluator/: README_savings_analysis.md  evaluate.py  savings_analysis.py
optimizer/: __init__.py  battery_config.py  battery_connection.py  battery_optimizer_workflow.py  consumption_provider.py  elpris_api.py  ev_charging.py  influxdb_client.py  main.py  models.py  plotting.py  price_fetcher.py  production_provider.py  schedule.json  solver.py
scripts/: backup_all_measurements.py  backup_influxdb.py  init-influxdb.sh  list_measurements.py  restore_all_measurements.py  restore_influxdb.py  show_influxdb_env.py  sync_influxdb.py  test_local_influxdb.py
scripts/influx-sync/: README.md  backup_all.py  core.py  restore_all.py  status.py  sync_all.py
tests/: test_battery_config.py  test_battery_optimizer_workflow.py  test_evaluate.py  test_solver.py
